@@ -2,6 +2,7 @@ Version 1.2.1
 * Enhancements
   * Added numerous missing element types
   * Support for Selenium 3 (Thanks Titus Fortner)
+  * Added new generated method for Image - (name)_loaded? (Thanks joesho112358)
 
 Version 1.2.0 / 2016-6-15
 * Enhancements
